# deimos

./: Cargo.toml  compile.sh
shaders/: blit_fs.glsl  frag.spv  sample_vs.glsl  shader.frag  shader.vert  vert.spv
shaders/compiled/: blit_fs.spv  blit_vs.spv
src/: app.rs  main.rs  sample.rs
src/gfx/: device.rs  entities.rs  frame.rs  mod.rs  swapchain.rs  texture.rs
src/gpu/: bridge.rs  definition.ts  device.rs  geometry.rs  mod.rs  structs.rs
src/graphics/: buffer.rs  color.rs  command.rs  descriptor.rs  device.rs  entities.rs  frame.rs  mod.rs  model.rs  pass.rs  pipeline.rs  queue.rs  sampler.rs  shader.rs  swap.rs  texture.rs  viewport.rs
src/rendering/: mesh.rs  mod.rs  renderer.rs
src/vulkan/: api.rs  device.rs  geometry.rs  mod.rs  structs.rs  swap.rs  sync.rs  texture.rs
